tests/toy/neg/000968_mutation.toylang
program a = { if a then int; } .
